[README] Gatsby + DockerでのTipsを追加

--- a/README.adoc
+++ b/README.adoc
@@ -7,3 +7,4 @@
 == Notes
 
 https://github.com/sunakan/notes-about-gatsby/issues/1[脳死でnpx gatsby new hogeしたら死んだ]
+https://github.com/sunakan/notes-about-gatsby/issues/2[Dockerでyarn developしたあとに手元でlocalhost:8000にアクセスできない]
